--- a/src/App.css
+++ b/src/App.css
@@ -13,19 +13,72 @@
   }
 }
 
+.title {
+  -webkit-text-stroke-width: 5px;
+  font-size: 14vh;
+  -webkit-text-stroke-color: #FFE9C6;
+  color: #ffffff;
+  margin-bottom: 0;
+}
+
+.subtitle {
+  font-weight: lighter;
+  font-style: italic;
+  font-size: 3vh;
+  margin-top: 0;
+  margin-bottom: 8vh;
+}
+
+.login {
+  border-radius: 16px;
+  width: 12vh;
+  height: 3.5vh;
+  color: #FFC3C0;
+  border: #FFC3C0;
+  font-size: 2vh;
+  font-weight: bold;
+  margin-bottom: 1vh;
+  margin: 2vh;
+}
+
+.signup {
+  margin-right: 5px;
+  border-radius: 16px;
+  width: 12vh;
+  height: 3.5vh;
+  color: #FFC3C0;
+  border: #FFC3C0;
+  font-size: 2vh;
+  font-weight: bold;
+  margin: 2vh;
+}
+
+.what {
+  margin-right: 5px;
+  border-radius: 16px;
+  width: 20vh;
+  height: 3.5vh;
+  color: #B5BBFF;
+  border: #B5BBFF;
+  font-size: 2vh;
+  font-weight: bold;
+  margin-top: 1.5vh;
+}
+
+.clear {
+  clear: both;
+}
+
 .App-header {
-  background-color: #282c34;
+  background: linear-gradient(to bottom, #DDEFFF, #FFF1CC, #FFD9BA, #FFC3C0, #959FFF );
+	background-size: 100%;
+	background-repeat: no-repeat;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
 }
 
 @keyframes App-logo-spin {
