--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,82 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background: linear-gradient(to bottom, #B721FF, #2AF598, #fec051, #FEE140, #FA709A );
+	background-size: 100%;
+	background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+body:before{
+	content:'';
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	width: 100%;
+	z-index: -1;
+	background: linear-gradient(to right bottom, rgba(255,255,255,0.2), #21D4FD 75%);
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
+}
+
+button {
+  padding: 0.7em 1.4em;
+  margin: 0 0.3em 0.3em 0;
+  border: none;
+  box-sizing: border-box;
+  font-weight: bold;
+  background: #caeefd;
+  text-align: center;
+  position: relative;
+  border-radius: 20px;
+}
+
+button:hover {
+  background: #b2def0;
+}
+
+button:active {
+  outline: none;
+  background: #95cae0;
+}
+
+button:focus {
+  outline: none;
+}
+
+.Dish {
+  background: #ffffff;
+  padding: 30px;
+  margin-bottom: 20px;
+  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.15);
+  border-radius: 13px;
+}
+
+h1 {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 50px;
+  color: #004d85;
+}
+
+h2 {
+  margin-top: 0;
+}
+
+p {
+  font-weight: bold;
+  color: #696969;
+}
