--- a/src/index.css
+++ b/src/index.css
@@ -19,30 +19,18 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: linear-gradient(to bottom, #B721FF, #2AF598, #fec051, #FEE140, #FA709A );
+  background: linear-gradient(to bottom, #DDEFFF, #FFF1CC, #FFD9BA, #FFC3C0, #959FFF );
 	background-size: 100%;
 	background-repeat: no-repeat;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 
-body:before{
-	content:'';
-	position: fixed;
-	top: 0;
-	bottom: 0;
-	width: 100%;
-	z-index: -1;
-	background: linear-gradient(to right bottom, rgba(255,255,255,0.2), #21D4FD 75%);
-}
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
-button {
+.clap {
   padding: 0.7em 1.4em;
   margin: 0 0.3em 0.3em 0;
   border: none;
@@ -54,16 +42,16 @@ button {
   border-radius: 20px;
 }
 
-button:hover {
+.clap:hover {
   background: #b2def0;
 }
 
-button:active {
+.clap:active {
   outline: none;
   background: #95cae0;
 }
 
-button:focus {
+.clap:focus {
   outline: none;
 }
 
@@ -73,6 +61,8 @@ button:focus {
   margin-bottom: 20px;
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.15);
   border-radius: 13px;
+  width: 40vh;
+  display: 'flex';
 }
 
 h1 {
