--- a/src/index.css
+++ b/src/index.css
@@ -59,6 +59,7 @@ code {
   background: #ffffff;
   padding: 30px;
   margin-bottom: 20px;
+  color: #95cae0;
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.15);
   border-radius: 13px;
   width: 40vh;
